--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "chart.js": "^2.8.0",
     "ng2-charts": "^2.3.0",
     "rxjs": "~6.4.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^8.14.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
